# tinyamodb

./: Cargo.toml
src/: atom.rs  main.rs
