[package]
name = "tinyamodb"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <hidekazu-kobayashi@cookpad.com>"]
edition = "2018"

[dependencies]
rocksdb = { git = "https://github.com/pingcap/rust-rocksdb.git" }
actix = "0.8"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempdir = "0.3.7"
